--- a/package.json
+++ b/package.json
@@ -47,27 +47,27 @@
     "bootstrap": "4.0.0-alpha.6",
     "css-loader": "*",
     "debug": "*",
-    "dotenv": "^4.0.0",
+    "dotenv": "*",
     "gulp": "*",
     "gulp-util": "*",
-    "jquery": "^3.1.1",
-    "jquery-ujs": "^1.2.2",
+    "jquery": "*",
+    "jquery-ujs": "*",
     "koa": "*",
-    "koa-bodyparser": "^4.1.0",
+    "koa-bodyparser": "*",
     "koa-flash-simple": "*",
     "koa-generic-session": "*",
     "koa-logger": "*",
-    "koa-methodoverride": "^2.0.0",
-    "koa-pug": "^3.0.0-2",
+    "koa-methodoverride": "*",
+    "koa-pug": "*",
     "koa-router": "next",
-    "koa-static": "^3.0.0",
-    "koa-webpack": "^0.3.1",
+    "koa-static": "*",
+    "koa-webpack": "*",
     "lodash": "*",
-    "pg": "^6.1.2",
+    "pg": "*",
     "sequelize": "*",
     "sqlite3": "*",
     "style-loader": "*",
-    "umzug": "^1.11.0",
+    "umzug": "*",
     "webpack": "*"
   },
   "devDependencies": {
@@ -76,9 +76,9 @@
     "eslint-config-airbnb-base": "*",
     "eslint-plugin-flowtype": "*",
     "eslint-plugin-import": "*",
-    "flow-bin": "^0.42",
+    "flow-bin": "^0.46",
     "flow-typed": "*",
-    "jest": "^18",
+    "jest": "^20",
     "jest-supertest-matchers": "*",
     "nodemon": "*",
     "supertest": "*"
