--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "scripts": {
     "gulp": "gulp",
+    "sequelize": "sequelize",
     "nodemon": "nodemon",
     "test": "jest",
     "babel-node": "babel-node",
@@ -43,7 +44,7 @@
     "babel-preset-env": "*",
     "babel-preset-flow": "*",
     "babel-preset-stage-0": "*",
-    "bootstrap": "4.0.0-alpha.6",
+    "bootstrap": "4.0.0-beta",
     "css-loader": "*",
     "debug": "*",
     "dotenv": "*",
@@ -57,13 +58,14 @@
     "koa-generic-session": "*",
     "koa-logger": "*",
     "koa-methodoverride": "*",
-    "koa-pug": "*",
+    "koa-pug": "3.0.0-2",
     "koa-router": "next",
     "koa-static": "*",
     "koa-webpack": "*",
     "lodash": "*",
     "pg": "*",
     "sequelize": "*",
+    "sequelize-cli": "*",
     "sqlite3": "*",
     "style-loader": "*",
     "umzug": "*",
@@ -75,9 +77,9 @@
     "eslint-config-airbnb-base": "*",
     "eslint-plugin-flowtype": "*",
     "eslint-plugin-import": "*",
-    "flow-bin": "^0.51",
+    "flow-bin": "^0.56",
     "flow-typed": "*",
-    "jest": "^20",
+    "jest": "^21",
     "jest-supertest-matchers": "*",
     "nodemon": "*",
     "supertest": "*"
