--- a/config/config.json
+++ b/config/config.json
@@ -1,14 +1,11 @@
 {
   "development": {
-    "database": "database_development.sqlite",
+    "storage": "./db.development.sqlite",
     "dialect": "sqlite"
   },
   "test": {
-    "username": "root",
-    "password": null,
-    "database": "database_test",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
+    "storage": ":memory:",
+    "dialect": "sqlite"
   },
   "production": {
     "username": "root",
