upgrade to new deps versions

--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "koa-nodejs-application",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "",
   "main": "dist/index.js",
   "bin": {
     "hexlet": "dist/bin/hexlet.js"
   },
   "engines": {
-    "node": "8"
+    "node": "9"
   },
   "jest": {
     "testEnvironment": "node"
@@ -37,52 +37,52 @@
   },
   "homepage": "https://github.com/hexlet-boilerplates/nodejs-package#readme",
   "dependencies": {
-    "babel-cli": "*",
-    "babel-core": "*",
-    "babel-loader": "*",
-    "babel-polyfill": "*",
-    "babel-preset-env": "*",
-    "babel-preset-flow": "*",
-    "babel-preset-stage-0": "*",
-    "bootstrap": "4.0.0-beta",
-    "popper.js": "*",
-    "css-loader": "*",
-    "debug": "*",
-    "dotenv": "*",
-    "gulp": "*",
-    "gulp-util": "*",
-    "jquery": "*",
-    "jquery-ujs": "*",
-    "koa": "*",
-    "koa-bodyparser": "*",
-    "koa-flash-simple": "*",
-    "koa-generic-session": "*",
-    "koa-logger": "*",
-    "koa-methodoverride": "*",
-    "koa-pug": "3.0.0-2",
-    "koa-router": "next",
-    "koa-static": "*",
-    "koa-webpack": "*",
-    "lodash": "*",
-    "pg": "*",
-    "sequelize": "*",
-    "sequelize-cli": "*",
-    "sqlite3": "*",
-    "style-loader": "*",
-    "umzug": "*",
-    "webpack": "*"
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-flow": "^6.23.0",
+    "babel-preset-stage-0": "^6.24.1",
+    "bootstrap": "^4.0.0-beta",
+    "css-loader": "^0.28.11",
+    "debug": "^3.1.0",
+    "dotenv": "^5.0.1",
+    "gulp": "^3.9.1",
+    "gulp-util": "^3.0.8",
+    "jquery": "^3.3.1",
+    "jquery-ujs": "^1.2.2",
+    "koa": "^2.5.0",
+    "koa-bodyparser": "^4.2.0",
+    "koa-flash-simple": "0.0.3",
+    "koa-generic-session": "^2.0.1",
+    "koa-logger": "^3.2.0",
+    "koa-methodoverride": "^2.0.0",
+    "koa-pug": "^3.0.0-2",
+    "koa-router": "^7.1.1",
+    "koa-static": "^4.0.2",
+    "koa-webpack": "^3.0.2",
+    "lodash": "^4.17.5",
+    "pg": "^7.4.1",
+    "popper.js": "^1.14.3",
+    "sequelize": "^4.37.6",
+    "sequelize-cli": "^4.0.0",
+    "sqlite3": "^4.0.0",
+    "style-loader": "^0.21.0",
+    "umzug": "^2.1.0",
+    "webpack": "^4.6.0"
   },
   "devDependencies": {
-    "babel-eslint": "*",
-    "eslint": "*",
-    "eslint-config-airbnb-base": "*",
-    "eslint-plugin-flowtype": "*",
-    "eslint-plugin-import": "*",
-    "flow-bin": "^0.56",
-    "flow-typed": "*",
-    "jest": "^21",
-    "jest-supertest-matchers": "*",
-    "nodemon": "*",
-    "supertest": "*"
+    "babel-eslint": "^8.2.3",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-flowtype": "^2.46.3",
+    "eslint-plugin-import": "^2.11.0",
+    "flow-bin": "^0.56.0",
+    "flow-typed": "^2.4.0",
+    "jest": "^21.2.1",
+    "jest-supertest-matchers": "0.0.1",
+    "nodemon": "^1.17.3",
+    "supertest": "^3.0.0"
   }
 }
