--- a/package.json
+++ b/package.json
@@ -80,6 +80,8 @@
     "eslint-plugin-import": "^2.11.0",
     "flow-bin": "^0.56.0",
     "flow-typed": "^2.4.0",
+    "babel-jest": "*",
+    "jest-cli": "*",
     "jest": "^21.2.1",
     "jest-supertest-matchers": "0.0.1",
     "nodemon": "^1.17.3",
