update eslint and fix errors

--- a/package.json
+++ b/package.json
@@ -38,13 +38,13 @@
   "homepage": "https://github.com/hexlet-boilerplates/nodejs-package#readme",
   "dependencies": {
     "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-stage-0": "^6.24.1",
-    "bootstrap": "^4.0.0-beta",
+    "bootstrap": "^4.1.1",
     "css-loader": "^0.28.11",
     "debug": "^3.1.0",
     "dotenv": "^5.0.1",
@@ -52,39 +52,41 @@
     "gulp-util": "^3.0.8",
     "jquery": "^3.3.1",
     "jquery-ujs": "^1.2.2",
-    "koa": "^2.5.0",
-    "koa-bodyparser": "^4.2.0",
+    "koa": "^2.5.1",
+    "koa-bodyparser": "^4.2.1",
     "koa-flash-simple": "0.0.3",
     "koa-generic-session": "^2.0.1",
     "koa-logger": "^3.2.0",
     "koa-methodoverride": "^2.0.0",
     "koa-pug": "^3.0.0-2",
-    "koa-router": "^7.1.1",
-    "koa-static": "^4.0.2",
+    "koa-router": "^7.4.0",
+    "koa-static": "^4.0.3",
     "koa-webpack": "^3.0.2",
-    "lodash": "^4.17.5",
-    "pg": "^7.4.1",
+    "lodash": "^4.17.10",
+    "pg": "^7.4.3",
     "popper.js": "^1.14.3",
-    "sequelize": "^4.37.6",
+    "sequelize": "^4.37.10",
     "sequelize-cli": "^4.0.0",
     "sqlite3": "^4.0.0",
     "style-loader": "^0.21.0",
     "umzug": "^2.1.0",
-    "webpack": "^4.6.0"
+    "webpack": "^4.10.2"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.3",
+    "babel-jest": "^23.0.1",
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-flowtype": "^2.46.3",
-    "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-babel": "^5.1.0",
+    "eslint-plugin-flowtype": "^2.49.3",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-jest": "^21.15.0",
     "flow-bin": "^0.56.0",
     "flow-typed": "^2.4.0",
-    "babel-jest": "*",
-    "jest-cli": "*",
     "jest": "^21.2.1",
+    "jest-cli": "^23.1.0",
     "jest-supertest-matchers": "0.0.1",
-    "nodemon": "^1.17.3",
-    "supertest": "^3.0.0"
+    "nodemon": "^1.17.5",
+    "supertest": "^3.1.0"
   }
 }
