--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,6 +1,9 @@
 ---
 
-# plugins: [flowtype]
+plugins:
+  - jest
+  - flowtype
+  - babel
 
 env:
   node: true
@@ -11,3 +14,8 @@ parser: babel-eslint
 
 extends:
   - 'airbnb-base'
+  - 'plugin:jest/recommended'
+  - 'plugin:flowtype/recommended'
+
+rules:
+  no-console: 0
