--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,9 @@
 {
-  "presets": ["env", "stage-0"]
+  "presets": [
+    "@babel/flow",
+    ["@babel/env", {
+      "targets": { "node": "current" },
+      "ignoreBrowserslistConfig": true
+    }]
+  ]
 }
