--- a/package.json
+++ b/package.json
@@ -37,22 +37,27 @@
   },
   "homepage": "https://github.com/hexlet-boilerplates/nodejs-package#readme",
   "dependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.4",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-flow": "^6.23.0",
-    "babel-preset-stage-0": "^6.24.1",
-    "bootstrap": "^4.1.1",
+    "@babel/cli": "^7.0.0-beta.51",
+    "@babel/core": "^7.0.0-beta.51",
+    "@babel/node": "^7.0.0-beta.51",
+    "@babel/plugin-transform-runtime": "^7.0.0-beta.51",
+    "@babel/polyfill": "7.0.0-beta.31",
+    "@babel/preset-env": "^7.0.0-beta.51",
+    "@babel/preset-flow": "^7.0.0-beta.51",
+    "@babel/preset-react": "^7.0.0-beta.51",
+    "@babel/preset-stage-0": "^7.0.0-beta.51",
+    "@babel/register": "^7.0.0-beta.51",
+    "babel-loader": "^8.0.0-beta.4",
+    "bootstrap": "^4.1.2",
     "css-loader": "^0.28.11",
     "debug": "^3.1.0",
     "dotenv": "^5.0.1",
     "gulp": "^3.9.1",
+    "gulp-cli": "^2.0.1",
     "gulp-util": "^3.0.8",
     "jquery": "^3.3.1",
     "jquery-ujs": "^1.2.2",
-    "koa": "^2.5.1",
+    "koa": "^2.5.2",
     "koa-bodyparser": "^4.2.1",
     "koa-flash-simple": "0.0.3",
     "koa-generic-session": "^2.0.1",
@@ -65,28 +70,28 @@
     "lodash": "^4.17.10",
     "pg": "^7.4.3",
     "popper.js": "^1.14.3",
-    "sequelize": "^4.37.10",
+    "sequelize": "^4.38.0",
     "sequelize-cli": "^4.0.0",
     "sqlite3": "^4.0.0",
     "style-loader": "^0.21.0",
     "umzug": "^2.1.0",
-    "webpack": "^4.10.2"
+    "webpack": "^4.16.1"
   },
   "devDependencies": {
-    "babel-eslint": "^8.2.3",
-    "babel-jest": "^23.0.1",
+    "babel-eslint": "^8.2.6",
+    "babel-jest": "^23.4.0",
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-babel": "^5.1.0",
-    "eslint-plugin-flowtype": "^2.49.3",
-    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-flowtype": "^2.50.0",
+    "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-jest": "^21.15.0",
     "flow-bin": "^0.56.0",
-    "flow-typed": "^2.4.0",
+    "flow-typed": "^2.5.1",
     "jest": "^21.2.1",
-    "jest-cli": "^23.1.0",
+    "jest-cli": "^23.4.1",
     "jest-supertest-matchers": "0.0.1",
-    "nodemon": "^1.17.5",
+    "nodemon": "^1.18.2",
     "supertest": "^3.1.0"
   }
 }
