--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,9 @@
     ["@babel/env", {
       "targets": { "node": "current" },
       "ignoreBrowserslistConfig": true
+    }],
+    ["@babel/stage-0", {
+      "decoratorsLegacy": true
     }]
   ]
 }
