--- a/package.json
+++ b/package.json
@@ -13,16 +13,8 @@
     "testEnvironment": "node"
   },
   "scripts": {
-    "gulp": "gulp",
-    "sequelize": "sequelize",
-    "nodemon": "nodemon",
     "test": "jest",
-    "babel-node": "babel-node",
-    "flow": "flow",
-    "flow-typed": "flow-typed",
     "start": "gulp server",
-    "eslint": "eslint",
-    "webpack": "webpack",
     "build": "npm run webpack -- -p --env production && babel src --out-dir dist --source-maps inline",
     "postinstall": "npm run build"
   },
@@ -37,27 +29,27 @@
   },
   "homepage": "https://github.com/hexlet-boilerplates/nodejs-package#readme",
   "dependencies": {
-    "@babel/cli": "^7.0.0-beta.54",
-    "@babel/core": "^7.0.0-beta.54",
-    "@babel/node": "^7.0.0-beta.54",
-    "@babel/plugin-transform-runtime": "^7.0.0-beta.54",
+    "@babel/cli": "^7.1.2",
+    "@babel/core": "^7.1.2",
+    "@babel/node": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.1.0",
     "@babel/polyfill": "7.0.0-beta.31",
-    "@babel/preset-env": "^7.0.0-beta.54",
-    "@babel/preset-flow": "^7.0.0-beta.54",
-    "@babel/preset-react": "^7.0.0-beta.54",
-    "@babel/preset-stage-0": "^7.0.0-beta.54",
-    "@babel/register": "^7.0.0-beta.54",
-    "babel-loader": "^8.0.0-beta.4",
-    "bootstrap": "^4.1.2",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-flow": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-stage-0": "^7.0.0",
+    "@babel/register": "^7.0.0",
+    "babel-loader": "^8.0.4",
+    "bootstrap": "^4.1.3",
     "css-loader": "^0.28.11",
-    "debug": "^3.1.0",
+    "debug": "^3.2.5",
     "dotenv": "^5.0.1",
     "gulp": "^3.9.1",
     "gulp-cli": "^2.0.1",
     "gulp-util": "^3.0.8",
     "jquery": "^3.3.1",
     "jquery-ujs": "^1.2.2",
-    "koa": "^2.5.2",
+    "koa": "^2.5.3",
     "koa-bodyparser": "^4.2.1",
     "koa-flash-simple": "0.0.3",
     "koa-generic-session": "^2.0.1",
@@ -67,31 +59,31 @@
     "koa-router": "^7.4.0",
     "koa-static": "^4.0.3",
     "koa-webpack": "^3.0.2",
-    "lodash": "^4.17.10",
-    "pg": "^7.4.3",
-    "popper.js": "^1.14.3",
-    "sequelize": "^4.38.0",
-    "sequelize-cli": "^4.0.0",
+    "lodash": "^4.17.11",
+    "pg": "^7.5.0",
+    "popper.js": "^1.14.4",
+    "sequelize": "^4.39.0",
+    "sequelize-cli": "^4.1.1",
     "sqlite3": "^4.0.0",
     "style-loader": "^0.21.0",
     "umzug": "^2.1.0",
-    "webpack": "^4.16.1"
+    "webpack": "^4.20.2"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.6",
-    "babel-jest": "^23.4.0",
+    "babel-jest": "^23.6.0",
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-babel": "^5.1.0",
-    "eslint-plugin-flowtype": "^2.50.0",
-    "eslint-plugin-import": "^2.13.0",
-    "eslint-plugin-jest": "^21.15.0",
+    "eslint-plugin-babel": "^5.2.1",
+    "eslint-plugin-flowtype": "^2.50.3",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jest": "^21.24.1",
     "flow-bin": "^0.56.0",
     "flow-typed": "^2.5.1",
     "jest": "^21.2.1",
-    "jest-cli": "^23.4.1",
+    "jest-cli": "^23.6.0",
     "jest-supertest-matchers": "0.0.1",
-    "nodemon": "^1.18.2",
-    "supertest": "^3.1.0"
+    "nodemon": "^1.18.4",
+    "supertest": "^3.3.0"
   }
 }
