--- a/package.json
+++ b/package.json
@@ -29,27 +29,26 @@
   },
   "homepage": "https://github.com/hexlet-boilerplates/nodejs-package#readme",
   "dependencies": {
-    "@babel/cli": "^7.1.2",
-    "@babel/core": "^7.1.2",
+    "@babel/cli": "^7.1.5",
+    "@babel/core": "^7.1.5",
     "@babel/node": "^7.0.0",
     "@babel/plugin-transform-runtime": "^7.1.0",
-    "@babel/polyfill": "7.0.0-beta.31",
-    "@babel/preset-env": "^7.1.0",
+    "@babel/polyfill": "7.0.0",
+    "@babel/preset-env": "^7.1.5",
     "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
-    "@babel/preset-stage-0": "^7.0.0",
     "@babel/register": "^7.0.0",
     "babel-loader": "^8.0.4",
     "bootstrap": "^4.1.3",
-    "css-loader": "^0.28.11",
-    "debug": "^3.2.5",
-    "dotenv": "^5.0.1",
+    "css-loader": "^1.0.1",
+    "debug": "^4.1.0",
+    "dotenv": "^6.1.0",
     "gulp": "^3.9.1",
     "gulp-cli": "^2.0.1",
     "gulp-util": "^3.0.8",
     "jquery": "^3.3.1",
     "jquery-ujs": "^1.2.2",
-    "koa": "^2.5.3",
+    "koa": "^2.6.2",
     "koa-bodyparser": "^4.2.1",
     "koa-flash-simple": "0.0.3",
     "koa-generic-session": "^2.0.1",
@@ -57,33 +56,33 @@
     "koa-methodoverride": "^2.0.0",
     "koa-pug": "^3.0.0-2",
     "koa-router": "^7.4.0",
-    "koa-static": "^4.0.3",
-    "koa-webpack": "^3.0.2",
+    "koa-static": "^5.0.0",
+    "koa-webpack": "^5.1.1",
     "lodash": "^4.17.11",
-    "pg": "^7.5.0",
-    "popper.js": "^1.14.4",
-    "sequelize": "^4.39.0",
-    "sequelize-cli": "^4.1.1",
-    "sqlite3": "^4.0.0",
-    "style-loader": "^0.21.0",
+    "pg": "^7.6.1",
+    "popper.js": "^1.14.5",
+    "sequelize": "^4.41.2",
+    "sequelize-cli": "^5.3.0",
+    "sqlite3": "^4.0.4",
+    "style-loader": "^0.23.1",
     "umzug": "^2.1.0",
-    "webpack": "^4.20.2"
+    "webpack": "^4.25.1"
   },
   "devDependencies": {
-    "babel-eslint": "^8.2.6",
+    "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint": "^5.9.0",
+    "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-babel": "^5.2.1",
-    "eslint-plugin-flowtype": "^2.50.3",
+    "eslint-plugin-flowtype": "^3.2.0",
     "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jest": "^21.24.1",
-    "flow-bin": "^0.56.0",
+    "eslint-plugin-jest": "^22.0.0",
+    "flow-bin": "^0.86.0",
     "flow-typed": "^2.5.1",
-    "jest": "^21.2.1",
+    "jest": "^23.6.0",
     "jest-cli": "^23.6.0",
     "jest-supertest-matchers": "0.0.1",
-    "nodemon": "^1.18.4",
+    "nodemon": "^1.18.6",
     "supertest": "^3.3.0"
   }
 }
