--- a/package.json
+++ b/package.json
@@ -14,9 +14,8 @@
   },
   "scripts": {
     "test": "jest",
-    "start": "gulp server",
-    "build": "npm run webpack -- -p --env production && babel src --out-dir dist --source-maps inline",
-    "postinstall": "npm run build"
+    "start": "gulp devServar",
+    "postinstall": "gulp prodBuild"
   },
   "repository": {
     "type": "git",
@@ -29,23 +28,10 @@
   },
   "homepage": "https://github.com/hexlet-boilerplates/nodejs-package#readme",
   "dependencies": {
-    "@babel/cli": "^7.1.5",
-    "@babel/core": "^7.1.6",
-    "@babel/node": "^7.0.0",
-    "@babel/plugin-transform-runtime": "^7.1.0",
-    "@babel/polyfill": "7.0.0",
-    "@babel/preset-env": "^7.1.6",
-    "@babel/preset-flow": "^7.0.0",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/register": "^7.0.0",
-    "babel-loader": "^8.0.4",
     "bootstrap": "^4.1.3",
     "css-loader": "^1.0.1",
     "debug": "^4.1.0",
     "dotenv": "^6.1.0",
-    "gulp": "^3.9.1",
-    "gulp-cli": "^2.0.1",
-    "gulp-util": "^3.0.8",
     "jquery": "^3.3.1",
     "jquery-ujs": "^1.2.2",
     "koa": "^2.6.2",
@@ -59,18 +45,27 @@
     "koa-static": "^5.0.0",
     "koa-webpack": "^5.1.1",
     "lodash": "^4.17.11",
-    "pg": "^7.6.1",
-    "popper.js": "^1.14.5",
+    "pg": "^7.7.1",
+    "popper.js": "^1.14.6",
     "sequelize": "^4.41.2",
-    "sequelize-cli": "^5.3.0",
+    "sequelize-cli": "^5.4.0",
     "sqlite3": "^4.0.4",
     "style-loader": "^0.23.1",
-    "umzug": "^2.2.0",
-    "webpack": "^4.26.1"
+    "umzug": "^2.2.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.1.5",
+    "@babel/core": "^7.1.6",
+    "@babel/plugin-proposal-optional-chaining": "^7.0.0",
+    "@babel/plugin-proposal-pipeline-operator": "^7.0.0",
+    "@babel/preset-env": "^7.1.6",
+    "@babel/preset-flow": "^7.0.0",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
+    "babel-loader": "^8.0.4",
+    "browser-sync": "^2.26.3",
+    "del": "^3.0.0",
     "eslint": "^5.9.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-babel": "^5.3.0",
@@ -79,10 +74,15 @@
     "eslint-plugin-jest": "^22.0.0",
     "flow-bin": "^0.87.0",
     "flow-typed": "^2.5.1",
+    "gulp": "^4.0.0",
+    "gulp-babel": "^8.0.0",
     "jest": "^23.6.0",
-    "jest-cli": "^23.6.0",
     "jest-supertest-matchers": "0.0.1",
-    "nodemon": "^1.18.7",
-    "supertest": "^3.3.0"
+    "mini-css-extract-plugin": "^0.4.5",
+    "supertest": "^3.3.0",
+    "webpack": "^4.26.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-middleware": "^3.4.0",
+    "webpack-merge": "^4.1.4"
   }
 }
