--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "webpack": "^4.28.2"
   },
   "devDependencies": {
+    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
     "eslint": "^5.11.0",
