--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "hexlet": "dist/bin/hexlet.js"
   },
   "engines": {
-    "node": "9"
+    "node": ">=13"
   },
   "jest": {
     "testEnvironment": "node"
@@ -29,58 +29,47 @@
   },
   "homepage": "https://github.com/hexlet-boilerplates/nodejs-package#readme",
   "dependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.2.2",
-    "@babel/node": "^7.2.2",
-    "@babel/plugin-transform-runtime": "^7.2.0",
-    "@babel/polyfill": "7.2.5",
-    "@babel/preset-env": "^7.3.1",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/register": "^7.0.0",
-    "babel-loader": "^8.0.5",
-    "bootstrap": "^4.2.1",
-    "css-loader": "^2.1.0",
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.9.0",
+    "@babel/node": "^7.8.7",
+    "@babel/preset-env": "^7.9.5",
+    "babel-loader": "^8.1.0",
+    "bootstrap": "^4.4.1",
+    "css-loader": "^3.5.2",
     "debug": "^4.1.1",
-    "dotenv": "^6.2.0",
-    "gulp": "^4.0.0",
-    "gulp-cli": "^2.0.1",
-    "gulp-util": "^3.0.8",
-    "jquery": "^3.3.1",
-    "jquery-ujs": "^1.2.2",
-    "koa": "^2.7.0",
-    "koa-bodyparser": "^4.2.1",
+    "dotenv": "^8.2.0",
+    "gulp": "^4.0.2",
+    "gulp-babel": "^8.0.0-beta.2",
+    "gulp-cli": "^2.2.0",
+    "jquery": "^3.5.0",
+    "koa": "^2.11.0",
+    "koa-bodyparser": "^4.3.0",
     "koa-flash-simple": "0.0.3",
-    "koa-generic-session": "^2.0.1",
-    "koa-logger": "^3.2.0",
+    "koa-generic-session": "^2.0.4",
+    "koa-logger": "^3.2.1",
     "koa-methodoverride": "^2.0.0",
-    "koa-pug": "^3.0.0-2",
-    "koa-router": "^7.4.0",
+    "koa-pug": "^4.0.3",
+    "koa-router": "^8.0.8",
     "koa-static": "^5.0.0",
-    "koa-webpack": "^5.2.1",
-    "lodash": "^4.17.11",
-    "pg": "^7.8.0",
-    "popper.js": "^1.14.7",
-    "sequelize": "^4.42.0",
-    "sequelize-cli": "^5.4.0",
-    "sqlite3": "^4.0.6",
-    "style-loader": "^0.23.1",
-    "umzug": "^2.2.0",
-    "webpack": "^4.29.3"
+    "koa-webpack": "^5.3.0",
+    "lodash": "^4.17.15",
+    "popper.js": "^1.16.1",
+    "sequelize": "^5.21.6",
+    "sequelize-cli": "^5.5.1",
+    "sqlite3": "^4.1.1",
+    "style-loader": "^1.1.3",
+    "webpack": "^4.42.1"
   },
   "devDependencies": {
-    "babel-core": "^7.0.0-bridge.0",
-    "babel-eslint": "^10.0.1",
-    "babel-jest": "^24.1.0",
-    "eslint": "^5.13.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-jest": "^22.2.2",
-    "jest": "^24.1.0",
-    "jest-cli": "^24.1.0",
-    "jest-supertest-matchers": "0.0.2",
-    "nodemon": "^1.18.10",
-    "supertest": "^3.4.2",
-    "webpack-cli": "^3.2.3"
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "^25.3.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jest": "^23.8.2",
+    "jest": "^25.3.0",
+    "jest-cli": "^25.3.0",
+    "nodemon": "^2.0.3",
+    "webpack-cli": "^3.3.11"
   }
 }
