--- a/package.json
+++ b/package.json
@@ -29,18 +29,9 @@
   },
   "homepage": "https://github.com/hexlet-boilerplates/nodejs-package#readme",
   "dependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.9.0",
-    "@babel/node": "^7.8.7",
-    "@babel/preset-env": "^7.9.5",
-    "babel-loader": "^8.1.0",
     "bootstrap": "^4.4.1",
-    "css-loader": "^3.5.2",
     "debug": "^4.1.1",
     "dotenv": "^8.2.0",
-    "gulp": "^4.0.2",
-    "gulp-babel": "^8.0.0-beta.2",
-    "gulp-cli": "^2.2.0",
     "jquery": "^3.5.0",
     "koa": "^2.11.0",
     "koa-bodyparser": "^4.3.0",
@@ -54,22 +45,34 @@
     "koa-webpack": "^5.3.0",
     "lodash": "^4.17.15",
     "popper.js": "^1.16.1",
-    "sequelize": "^5.21.6",
-    "sequelize-cli": "^5.5.1",
-    "sqlite3": "^4.1.1",
-    "style-loader": "^1.1.3",
-    "webpack": "^4.42.1"
+    "sequelize": "^5.21.6"
   },
   "devDependencies": {
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.9.0",
+    "@babel/node": "^7.8.7",
+    "@babel/preset-env": "^7.9.5",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^25.3.0",
+    "babel-loader": "^8.1.0",
+    "css-loader": "^3.5.2",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jest": "^23.8.2",
+    "gulp": "^4.0.2",
+    "gulp-babel": "^8.0.0-beta.2",
+    "gulp-cli": "^2.2.0",
+    "gulp-util": "^3.0.8",
     "jest": "^25.3.0",
     "jest-cli": "^25.3.0",
+    "jest-supertest-matchers": "0.0.2",
     "nodemon": "^2.0.3",
+    "sequelize-cli": "^5.5.1",
+    "sqlite3": "^4.1.1",
+    "style-loader": "^1.1.3",
+    "supertest": "^4.0.2",
+    "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11"
   }
 }
