update deps & fix config

--- a/config/config.json
+++ b/config/config.json
@@ -8,10 +8,7 @@
     "dialect": "sqlite"
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
+    "storage": "./db.development.sqlite",
+    "dialect": "sqlite"
   }
 }
