--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "test": "jest",
     "start": "gulp server",
-    "build": "npx webpack -p --env production",
+    "build": "NODE_ENV=production webpack --mode production",
     "postinstall": "npm run build"
   },
   "repository": {
@@ -29,49 +29,49 @@
   },
   "homepage": "https://github.com/hexlet-boilerplates/nodejs-package#readme",
   "dependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.9.0",
-    "@babel/node": "^7.8.7",
-    "@babel/preset-env": "^7.9.5",
-    "babel-loader": "^8.1.0",
-    "bootstrap": "^4.4.1",
-    "css-loader": "^3.5.2",
-    "debug": "^4.1.1",
+    "@babel/cli": "^7.13.14",
+    "@babel/core": "^7.13.14",
+    "@babel/node": "^7.13.13",
+    "@babel/preset-env": "^7.13.12",
+    "babel-loader": "^8.2.2",
+    "bootstrap": "^4.6.0",
+    "css-loader": "^5.2.0",
+    "debug": "^4.3.1",
     "dotenv": "^8.2.0",
     "gulp": "^4.0.2",
-    "gulp-cli": "^2.2.0",
+    "gulp-cli": "^2.3.0",
     "gulp-util": "^3.0.8",
-    "jquery": "^3.5.0",
-    "koa": "^2.11.0",
+    "jquery": "^3.6.0",
+    "koa": "^2.13.1",
     "koa-bodyparser": "^4.3.0",
     "koa-flash-simple": "0.0.3",
-    "koa-generic-session": "^2.0.4",
+    "koa-generic-session": "^2.1.1",
     "koa-logger": "^3.2.1",
     "koa-methodoverride": "^2.0.0",
-    "koa-pug": "^4.0.3",
-    "koa-router": "^8.0.8",
+    "koa-pug": "^5.0.0",
+    "koa-router": "^10.0.0",
     "koa-static": "^5.0.0",
-    "koa-webpack": "^5.3.0",
-    "lodash": "^4.17.15",
-    "nodemon": "^2.0.3",
+    "koa-webpack": "^6.0.0",
+    "lodash": "^4.17.21",
+    "nodemon": "^2.0.7",
     "popper.js": "^1.16.1",
-    "sequelize": "^5.21.6",
-    "sequelize-cli": "^5.5.1",
-    "sqlite3": "^4.1.1",
-    "style-loader": "^1.1.3",
-    "webpack": "^4.42.1"
+    "sequelize": "^6.6.2",
+    "sequelize-cli": "^6.2.0",
+    "sqlite3": "^5.0.2",
+    "style-loader": "^2.0.0",
+    "webpack": "^4.46.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^25.3.0",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.1.0",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-jest": "^23.8.2",
-    "jest": "^25.3.0",
-    "jest-cli": "^25.3.0",
+    "babel-jest": "^26.6.3",
+    "eslint": "^7.23.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.3.4",
+    "jest": "^26.6.3",
+    "jest-cli": "^26.6.3",
     "jest-supertest-matchers": "0.0.2",
-    "supertest": "^4.0.2",
-    "webpack-cli": "^3.3.11"
+    "supertest": "^6.1.3",
+    "webpack-cli": "^4.6.0"
   }
 }
