add logic to deploy

--- a/config/config.json
+++ b/config/config.json
@@ -8,7 +8,7 @@
     "dialect": "sqlite"
   },
   "production": {
-    "storage": "./db.development.sqlite",
+    "storage": ":memory:",
     "dialect": "sqlite"
   }
 }
