--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -17,3 +17,25 @@ jobs:
         run: make compose-lint
       - name: Run tests
         run: make compose-test
+
+
+      - name: Set up Docker Buildx
+        if: ${{ github.event_name == 'push' }}
+        uses: docker/setup-buildx-action@v1
+
+      - name: Login to Docker Hub
+        if: ${{ github.event_name == 'push' }}
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and push
+        if: ${{ github.event_name == 'push' }}
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          cache-from: hexletcomponents/koa-nodejs-application:latest
+          cache-to: type=inline
+          tags: hexletcomponents/koa-nodejs-application:latest
