--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,5 +9,5 @@ services:
       - "4000:4000"
       - "8081:8081"
     volumes:
-      - .:/code
+      - .:/app
       - ./.bash_history:/root/.bash_history
