--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "scripts": {
     "test": "jest",
-    "start": "gulp server",
+    "db-migrate": "sequelize db:migrate",
+    "start": "npm run db-migrate && gulp server",
     "build": "NODE_ENV=production webpack --mode production",
     "postinstall": "npm run build"
   },
